# Lagoa

./: .env  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml  sql_app.db
Docker/dev/: Dockerfile
Lagoa/: crud.py  database.py  main.py  main2.py  models.py
alembic/: env.py
alembic/versions/: revision_0000_.py
data/db/: postmaster.pid
data/db/base/5/: 1247  1249  1259  16388  16393  16395  16396  16397  16411  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
data/db/global/: 1260  pg_control  pg_internal.init
scripts/: create-revision.sh  start-lint.sh
tests/: test_crud.py
